feat: Ajout des User Entity

--- a/my_project_directory/config/services.yaml
+++ b/my_project_directory/config/services.yaml
@@ -25,3 +25,7 @@ services:
 
     app.slugify:
         class: 'App\Service\Slugify'
+
+    App\State\UserPasswordHasher:
+        bind:
+            $processor: '@api_platform.doctrine.orm.state.persist_processor'
