--- a/my_project_directory/composer.json
+++ b/my_project_directory/composer.json
@@ -17,6 +17,7 @@
         "doctrine/orm": "^3.2",
         "fakerphp/faker": "^1.23",
         "knplabs/knp-paginator-bundle": "^6.6",
+        "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
