--- a/my_project_directory/config/packages/vich_uploader.yaml
+++ b/my_project_directory/config/packages/vich_uploader.yaml
@@ -1,8 +1,7 @@
 vich_uploader:
-    db_driver: orm
-
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
-    #        namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
+    db_driver: orm 
+    mappings:
+        media_object: 
+            uri_prefix: /uploads/media 
+            upload_destination: '%kernel.project_dir%/public/uploads/media'
+            namer: Vich\UploaderBundle\Naming\OrignameNamer
