--- a/my_project_directory/composer.json
+++ b/my_project_directory/composer.json
@@ -30,14 +30,15 @@
         "symfony/flex": "^2",
         "symfony/form": "7.1.*",
         "symfony/framework-bundle": "7.1.*",
-        "symfony/http-client": "7.1.*",
+        "symfony/http-client": "^7.1.7",
+        "symfony/http-foundation": "^7.1.7",
         "symfony/intl": "7.1.*",
         "symfony/mailer": "7.1.*",
         "symfony/mercure-bundle": "^0.3.9",
         "symfony/mime": "7.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "7.1.*",
-        "symfony/process": "7.1.*",
+        "symfony/process": "^7.1.7",
         "symfony/property-access": "7.1.*",
         "symfony/property-info": "7.1.*",
         "symfony/runtime": "7.1.*",
@@ -53,9 +54,9 @@
         "symfony/yaml": "7.1.*",
         "twig/extra-bundle": "^3.12",
         "twig/intl-extra": "^3.12",
-        "twig/twig": "^2.12|^3.0",
+        "twig/twig": "^3.14.1",
         "vich/uploader-bundle": "^2.4",
-        "webonyx/graphql-php": "^15.14",
+        "webonyx/graphql-php": "^15.18",
         "xylis/faker-cinema-providers": "^2.0"
     },
     "config": {
