--- a/my_project_directory/composer.json
+++ b/my_project_directory/composer.json
@@ -111,6 +111,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.6",
+        "phpmd/phpmd": "^2.15",
         "phpstan/phpstan": "^1.12",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.10",
